# Tapestry

./: CMakeLists.txt  README.md  prog
include/: Shader.hpp  Sprite.hpp  SpriteRenderer.hpp  loader.hpp  loader22.hpp  shader.h  sprite.h  sprite22.h  spriterenderer.h  spriterenderer.hpp  spriterenderer22.hpp  window.h
include/glad/: glad.h
shaders/: alpha-edge-detect.glsl  chromatic-aberration.glsl  frag.glsl  laplasian-edge-detection.glsl  vert.glsl
src/: glad.c  loader.cpp  loader2.cpp  main.cpp  shader.cpp  sprite.cpp  spriterenderer.cpp  spriterenderer2.cpp  window.cpp
